--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap3": "^3.3.5",
     "moment": "^2.22.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
